--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,74 +17,120 @@
 
     <div class="main">
         <div class="produse">
-            <div class="carti carte1 frankHerbert">
+            <div class="carti carte1 brianHerbert">
+                <p>Hunting Harkonnens</p>
                 <img src="./images/carte1.jpg" ></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte2">
+            <div class="carti carte2 brianHerbert">
+                <p>The Butlerian Jihad</p>
                 <img src="./images/carte2.jpg" ></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte3">
+            <div class="carti carte3 brianHerbert">
+                <p>Whipping Mek</p>
                 <img src="./images/carte3.jpg" ></img>
+                <button class="citit">Citit</button>
             </div>   
-            <div class="carti carte4">
+            <div class="carti carte4 brianHerbert">
+                <p>The Machine Crusade</p>
                 <img src="./images/carte4.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte5">
+            <div class="carti carte5 brianHerbert">
+                <p>The Battle of Corrin</p>
                 <img src="./images/carte5.jpg" ></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte6">
+            <div class="carti carte6 brianHerbert">
+                <p>Sisterhood of Dune</p>
                 <img src="./images/carte6.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte7">
+            <div class="carti carte7 brianHerbert">
+                <p>Mentats of Dune</p>
                 <img src="./images/carte7.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte8">
+            <div class="carti carte8 brianHerbert">
+                <p>Navigators of Dune</p>
                 <img src="./images/carte8.jpg"></img>
+                <button class="citit">Citit</button>
             </div>   
-            <div class="carti carte9">
+            <div class="carti carte9 brianHerbert">
+                <p>House Atreides</p>
                 <img src="./images/carte9.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte10">
+            <div class="carti carte10 brianHerbert">
+                <p>House Harkonnen</p>
                 <img src="./images/carte10.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte11">
+            <div class="carti carte11 brianHerbert">
+                <p>House Corrino</p>
                 <img src="./images/carte11.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte12">
+            <div class="carti carte12 brianHerbert">
+                <p>The Duke of Caladan</p>
                 <img src="./images/carte12.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte13">
+            <div class="carti carte13 brianHerbert">
+                <p>The Lady of Caladan</p>
                 <img src="./images/carte13.jpg"></img>
+                <button class="citit">Citit</button>
             </div>   
-            <div class="carti carte14">
+            <div class="carti carte14 brianHerbert">
+                <p>The Heir of Caladan</p>
                 <img src="./images/carte14.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte15">
+            <div class="carti carte15 frankHerbert">
+                <p>Frank Herbert's Dune</p>
                 <img src="./images/carte15.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte16">
+            <div class="carti carte16 brianHerbert">
+                <p>Paul of Dune</p>
                 <img src="./images/carte16.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte17">
+            <div class="carti carte17 frankHerbert">
+                <p>Dune Messiah</p>
                 <img src="./images/carte17.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte18">
+            <div class="carti carte18 brianHerbert">
+                <p>The Winds of Dune</p>
                 <img src="./images/carte18.jpg"></img>
+                <button class="citit">Citit</button>
             </div>   
-            <div class="carti carte19">
+            <div class="carti carte19 frankHerbert">
+                <p>Children of Dune</p>
                 <img src="./images/carte19.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte20">
+            <div class="carti carte20 frankHerbert">
+                <p>God-Emperor of Dune</p>
                 <img src="./images/carte20.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
-            <div class="carti carte21">
+            <div class="carti carte21 frankHerbert">
+                <p>Heretics of Dune</p>
                 <img src="./images/carte21.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
             <div class="carti carte22">
+                <p>Hunters of Dune</p>
                 <img src="./images/carte22.jpg"></img>
+                <button class="citit">Citit</button>
             </div>   
             <div class="carti carte23">
+                <p>Sandworms of Dune</p>
                 <img src="./images/carte23.jpg"></img>
+                <button class="citit">Citit</button>
             </div>
         </div>
     </div>
