--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,7 +1,12 @@
     <div class="sidenav">
-        <a href="#">Shop</a>
-        <a href="#">Cart</a>
+        <button class="darkLight">Dark</button>
         <div class="filters"></div>
-        <a href="#" class="filtru" data-filter="all">All</a>
-        <a href="#" class="filtru" data-filter="frankHerbert">Frank Herbert</a>
+        <a href="#" class="filtru all" data-filter="all">All</a>
+        <a href="#" class="filtru brianHerbert" data-filter="brianHerbert">Brian Herbert</a>
+        <a href="#" class="filtru frankHerbert" data-filter="frankHerbert">Frank Herbert</a>
+        <h2>Citite</h2>
+        <ol class="lsCitit">
+        </ol>
+        <a href="#" class="elimina">Elimina</a>
+        <p class="nrCitite"></p>
     </div>
