--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,6 @@
-
+body{
+  background-color: aliceblue;
+}
 .topnav {
     /* width: 300px; */
     /* height: 50px; */
@@ -65,4 +67,8 @@
   }
   .main{
       margin-left:160px;
+  }
+
+  .carti>p{
+    display: none;
   }
