--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,9 @@
 
     <div class="main">
         <div class="produse">
+            <div class="deCitit">
+                <h2>d</h2>
+            </div>
             <div class="carti carte1 brianHerbert">
                 <p>Hunting Harkonnens</p>
                 <img src="./images/carte1.jpg" ></img>
