--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,8 @@
     <div class="sidenav">
         <button class="darkLight">Dark</button>
+        <button class="reseteazaDarkLight">original</button>
+        
+        
         <div class="filters"></div>
         <a href="#" class="filtru all" data-filter="all">All</a>
         <a href="#" class="filtru brianHerbert" data-filter="brianHerbert">Brian Herbert</a>
@@ -9,4 +12,5 @@
         </ol>
         <a href="#" class="elimina">Elimina</a>
         <p class="nrCitite"></p>
+        <button class="reseteazaTot">reseteazaINFO</button>
     </div>
