--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,8 @@
     <div class="main">
         <div class="produse">
             <div class="deCitit">
-                <h2>d</h2>
+                <h2></h2>
+                <h4>K pentru a opri</h4>
             </div>
             <div class="carti carte1 brianHerbert">
                 <p>Hunting Harkonnens</p>
