--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -4,7 +4,14 @@
         
         
         <div class="filters"></div>
+        <a href="http://localhost:3000/create" class="CRUD" data-filter="all">Create</a>
+        <a href="http://localhost:3000/read" class="CRUD" data-filter="all">Read</a>
+        <a href="http://localhost:3000/update" class="CRUD" data-filter="all">Update</a>
+        <a href="http://localhost:3000/delete" class="CRUD" data-filter="all">Delete</a>
+
+
         <a href="#" class="filtru all" data-filter="all">All</a>
+        
         <a href="#" class="filtru brianHerbert" data-filter="brianHerbert">Brian Herbert</a>
         <a href="#" class="filtru frankHerbert" data-filter="frankHerbert">Frank Herbert</a>
         <h2>Citite</h2>
