--- a/views/create.ejs
+++ b/views/create.ejs
@@ -2,16 +2,24 @@
 <html lang = "ro">
 <head>
     
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
+  <%- include('./partials/sidebar'); %>
+  <div class="main">
     <h2>Adauga o alta carte</h2>
     <form action="/create"  method="post">
-      <div>Titlul cartii: <input type="text" name="titlu" /></div>
+      <div>Titlul cartii: <input id="titlu" type="text" name="titlu" /></div>
+      <div>Autorul cartii: <input type="text" name="autor" /></div>
       <input type="submit" value="Submit" />
     </form>
+  </div>
 </body>
 </html>
+<script>
+  let titlu = document.getElementById("titlu");
+  console.log(/^[A-Za-z\s]*$/.test(titlu))
+</script>
