--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
 
 <body>
 
-    <div class="topnav">
+    <form class="topnav">
         <input type="text" placeholder="Search...">
-    </div>
+    </form>
 
     <%- include('./partials/sidebar'); %>
 
