--- a/views/update.ejs
+++ b/views/update.ejs
@@ -2,17 +2,20 @@
 <html lang = "ro">
 <head>
     
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
+  <%- include('./partials/sidebar'); %>
+  <div class="main">
     <h2>Adauga o alta carte</h2>
     <form action="/update"  method="post">
       <div>Titlul cartii pe care vrei sa o modifici: <input type="text" name="titlu" /></div>
       <div>Titlul nou: <input type="text" name="titluNou" /></div>
       <input type="submit" value="Submit" />
     </form>
+  </div>
 </body>
 </html>
