--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -2,16 +2,19 @@
 <html lang = "ro">
 <head>
     
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-    <h2>Adauga o alta carte</h2>
+  <%- include('./partials/sidebar'); %>
+  <div class="main">
+    <h2>Sterge o carte dupa titlu</h2>
     <form action="/delete"  method="post">
       <div>Titlul cartii pe care vrei sa o stergi: <input type="text" name="titlu" /></div>
       <input type="submit" value="Submit" />
     </form>
+  </div>
 </body>
 </html>
