--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -4,10 +4,10 @@
         
         
         <div class="filters"></div>
-        <a href="http://localhost:3000/create" class="CRUD" data-filter="all">Create</a>
-        <a href="http://localhost:3000/read" class="CRUD" data-filter="all">Read</a>
-        <a href="http://localhost:3000/update" class="CRUD" data-filter="all">Update</a>
-        <a href="http://localhost:3000/delete" class="CRUD" data-filter="all">Delete</a>
+        <a href="http://localhost:3000/create" class="CRUD" id="create" >Create</a>
+        <a href="http://localhost:3000/read" class="CRUD" id="read">Read</a>
+        <a href="http://localhost:3000/update" class="CRUD" id="update">Update</a>
+        <a href="http://localhost:3000/delete" class="CRUD" id="delete">Delete</a>
 
 
         <a href="#" class="filtru all" data-filter="all">All</a>
